main_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      name: app-pod
      labels:
        app: app
    spec:
      containers:
        - name: app-container
          image: docker.io/codewriter369/metahuman:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
