test_deployment_v1.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-pod1
  labels: 
    team: integrations
    app: todo
spec: 
  containers:
    - name: nginx-container
      image: nginx:latest
      ports: 
        - containerPort: 80
