main_node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-service
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      # nodePort: 39534
  selector:
    app: app
