main_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector: 
    app: app
  ports:
    - protocol: "TCP"
      port: 8083
      targetPort: 5000
  type: ClusterIP
