service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: timeapp-service
spec:
  selector:
    app: timeapp
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 5000
  type: NodePort
