ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp-ingress
spec:
  rules:
  - host: myapp-tenant-abc123.tenant-74334f-oidev.lga1.ingress.coreweave.cloud # Replace with your desired hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sampleapp-service
            port:
              number: 6000
